--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,17 +32,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Checkout Action Base
-        uses: actions/checkout@v3
-        with:
-          repository: xcidic/cao-actions-base
-          ref: v4.8
-          token: ${{ secrets.AGENT_TOKEN }}
-          path: ./.github/actions/base
-      - name: Setup Base
-        uses: ./.github/actions/base
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
       - name: Install dependencies
         run: yarn
       - run: yarn test
