test mend scarnning 6

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -46,6 +46,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with: ${{ github.repository }}
       - name: Mend Scanning
         uses: ./.github/actions/base
         with:
@@ -55,7 +56,10 @@ jobs:
           mend-host-key: ${{ secrets.MEND_HOST_KEY }}
           mend-follow-policy: ${{ env.MEND_FOLLOW_POLICY }}
           mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }}
-          actions/checkout Default: ${{ github.repository }} 
+      - run: |
+          echo Downloading Mend CLI
+          curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend
+          echo Start Mend CLI scan
 
   sonarqube-scanning:
     runs-on: ubuntu-20.04
