--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,27 +26,33 @@ env:
   ACTIONS_STEP_DEBUG: true
 
 jobs:
-  build-testing:
-    runs-on: ubuntu-20.04
-    timeout-minutes: 20
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'yarn'
-      - name: Install dependencies
-        run: yarn
-      - run: yarn test
+  # build-testing:
+  #   runs-on: ubuntu-20.04
+  #   timeout-minutes: 20
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Use Node.js ${{ env.NODE_VERSION }}
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: 'yarn'
+  #     - name: Install dependencies
+  #       run: yarn
+  #     - run: yarn test
   
   mend-scanning:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with: ${{ github.repository }}
+      - name: Checkout Action Base
+        uses: actions/checkout@v3
+        with:
+          repository: xcidic/cao-actions-base
+          ref: v4.7
+          token: ${{ secrets.AGENT_TOKEN }}
+          path: ./.github/actions/base
       - name: Mend Scanning
         uses: ./.github/actions/base
         with:
@@ -57,25 +63,25 @@ jobs:
           mend-follow-policy: ${{ env.MEND_FOLLOW_POLICY }}
           mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }}
 
-  sonarqube-scanning:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Scan Actions
-        id: scan
-        uses: './.github/actions/security'
-        with:
-          is-sonar: true
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
-          sonar-host-url: ${{ env.SONAR_HOST_URL }}
-      - name: Security Actions Output
-        if: ${{ always() }}
-        run: |
-          echo "Sonar validation error: ${{ steps.security.outputs.sonar-validation }}"
-          echo "Sonar process error: ${{ steps.security.outputs.sonar-process }}"
+  # sonarqube-scanning:
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Scan Actions
+  #       id: scan
+  #       uses: './.github/actions/security'
+  #       with:
+  #         is-sonar: true
+  #         sonar-token: ${{ secrets.SONAR_TOKEN }}
+  #         sonar-host-url: ${{ env.SONAR_HOST_URL }}
+  #     - name: Security Actions Output
+  #       if: ${{ always() }}
+  #       run: |
+  #         echo "Sonar validation error: ${{ steps.security.outputs.sonar-validation }}"
+  #         echo "Sonar process error: ${{ steps.security.outputs.sonar-process }}"
     
   # deploy:
   #   needs: [build-testing, mend-scanning, sonarqube-scanning]
