--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,6 +52,7 @@ jobs:
           repository: xcidic/cao-actions-base
           ref: v4.8
           token: ${{ secrets.AGENT_TOKEN }}
+          username: Diki-xcidic
           path: ./.github/actions/base
       - name: Mend Scanning
         uses: ./.github/actions/base
