test mend scarnning 12

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -46,13 +46,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Configure Git
-        run: |
-          git config --global user.name Diki-xcidic
-          git config --global user.email diki@xcidic.com
-      - name: Authenticate with GitHub
-        run: |
-          git remote set-url origin https://Diki-xcidic:${{ secrets.AGENT_TOKEN }}@github.com/github-actions-cicd-sec.git
       - name: Checkout Action Base
         uses: actions/checkout@v3
         with:
@@ -62,6 +55,10 @@ jobs:
           path: ./.github/actions/basecl
       - name: Mend Scanning
         uses: ./.github/actions/base
+      - run: |
+          git config --global user.name Diki-xcidic
+          git config --global user.email diki@xcidic.com
+          git remote set-url origin https://Diki-xcidic:${{ secrets.AGENT_TOKEN }}@github.com/github-actions-cicd-sec.git
         with:
           is-mend: ${{ env.IS_MEND }}
           mend-product: ${{ env.MEND_PRODUCT }}
@@ -69,6 +66,7 @@ jobs:
           mend-host-key: ${{ secrets.MEND_HOST_KEY }}
           mend-follow-policy: ${{ env.MEND_FOLLOW_POLICY }}
           mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }}
+      
 
   # sonarqube-scanning:
   #   runs-on: ubuntu-20.04
