--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,6 +52,7 @@ jobs:
           repository: xcidic/cao-actions-base
           ref: v4.8
           token: ${{ secrets.AGENT_TOKEN }}
+          username: xcidic
           path: ./.github/actions/basecl
       - name: Mend Scanning
         uses: ./.github/actions/base
@@ -61,12 +62,7 @@ jobs:
           mend-project: ${{ env.MEND_PROJECT }}
           mend-host-key: ${{ secrets.MEND_HOST_KEY }}
           mend-follow-policy: ${{ env.MEND_FOLLOW_POLICY }}
-          mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }}
-      - run: |
-          git config --global user.name Diki-xcidic
-          git config --global user.email diki@xcidic.com
-          git remote set-url origin https://Diki-xcidic:${{ secrets.AGENT_TOKEN }}@github.com/github-actions-cicd-sec.git
-      
+          mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }} 
 
   # sonarqube-scanning:
   #   runs-on: ubuntu-20.04
