--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -50,7 +50,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: xcidic/cao-actions-base
-          ref: v4.7
+          ref: v4.8
+          lfs: true
           token: ${{ secrets.AGENT_TOKEN }}
           path: ./.github/actions/basecl
       - name: Mend Scanning
