--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,11 +1,11 @@
-name: NodeJs CI-CD Security
-
+name: node-actions
+# on: [push]
 on:
   push:
     branches: [dev]
   pull_request:
     branches: [dev]
-
+    
 env:
   # IS_DEPLOY: false
   # DEPLOY_HOST: '95.111.195.225'
@@ -26,37 +26,46 @@ env:
   ACTIONS_STEP_DEBUG: true
 
 jobs:
-  build-testing:
+  build-deploy:
     runs-on: ubuntu-20.04
-    timeout-minutes: 20
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v3
+      - name: Checkout Action Base
+        uses: actions/checkout@v3
+        with:
+          repository: xcidic/cao-actions-base
+          ref: v4.7
+          token: ${{ secrets.AGENT_TOKEN }}
+          path: ./.github/actions/base
+      - name: Setup Base
+        uses: ./.github/actions/base
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'yarn'
-      - name: Install dependencies
-        run: yarn
-      - run: yarn test
-      - name: Mend CLI Scan
-        env:
-          #SCA
-          MEND_EMAIL: ${{secrets.MEND_SCA_EMAIL}}
-          MEND_USER_KEY: ${{secrets.MEND_SCA_USERKEY}}
-          MEND_URL: https://saas.mend.io
-          #SAST
-          # MEND_SAST_SERVER_URL: https://saas.mend.io/sast
-          # MEND_SAST_API_TOKEN: ${{secrets.MEND_SAST_API}}
-          # MEND_SAST_ORGANIZATION: ${{secrets.MEND_SAST_ORGANIZATION}}
-        run: |
-          echo Downloading Mend CLI
-          curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend
-          echo Start Mend CLI scan
-          ./mend sca -u
+          pm2-args: start:prod
+          pm2-env: ${{ env.PM2_ENV }}
+          pm2-name: ${{ env.PM2_NAME }}
+          is-deploy: ${{ env.IS_DEPLOY }}
+          deploy-host: ${{ env.DEPLOY_HOST }}
+          deploy-host-key: ${{ secrets.DEPLOY_HOST_KEY_DEV }}
 
-  # sonarqube-scanning:
+          is-mend: ${{ env.IS_MEND }}
+          mend-product: ${{ env.MEND_PRODUCT }}
+          mend-project: ${{ env.MEND_PROJECT }}
+          mend-host-key: ${{ secrets.MEND_HOST_KEY }}
+          mend-follow-policy: ${{ env.MEND_FOLLOW_POLICY }}
+          mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }}
+
+      - run: yarn install
+      - run: yarn test
+      - if: ${{ fromJSON(env.IS_DEPLOY) }}
+        run: |
+          echo -e "${{ secrets.DEV_ENV }}" > .env
+          yarn build
+          rsync -avzrut --delete-delay --exclude .git . $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
+          ssh $DEPLOY_USER@$DEPLOY_HOST 'cd ${{ env.DEPLOY_PATH }} && pm2 startOrReload ecosystem.config.cjs'
+
+  # scan-tool:
   #   runs-on: ubuntu-20.04
   #   steps:
   #     - name: Checkout
@@ -67,7 +76,7 @@ jobs:
   #       id: scan
   #       uses: './.github/actions/security'
   #       with:
-  #         is-sonar: true
+  #         is-sonar: false
   #         sonar-token: ${{ secrets.SONAR_TOKEN }}
   #         sonar-host-url: ${{ env.SONAR_HOST_URL }}
   #     - name: Security Actions Output
@@ -75,28 +84,10 @@ jobs:
   #       run: |
   #         echo "Sonar validation error: ${{ steps.security.outputs.sonar-validation }}"
   #         echo "Sonar process error: ${{ steps.security.outputs.sonar-process }}"
-    
-  # deploy:
-  #   needs: [build-testing, sonarqube-scanning]
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - name: Deploy using ssh
-  #       uses: appleboy/ssh-action@v0.1.10
-  #       with:
-  #         host: ${{ secrets.DEPLOY_HOST }}
-  #         username: ${{ secrets.DEPLOY_USER }}
-  #         key: ${{ secrets.PRIVATE_KEY }}
-  #         port: 22
-  #         script: |
-  #           cd ~/apps/github-action3
-  #           git pull origin dev
-  #           git status
-  #           yarn
-  #           pm2 restart src/index.js
-  
+
   # zap-tool:
   #   runs-on: ubuntu-20.04
-  #   needs: deploy
+  #   needs: build-deploy
   #   steps:
   #     - name: Checkout
   #       uses: actions/checkout@v3
