--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,44 +26,35 @@ env:
   ACTIONS_STEP_DEBUG: true
 
 jobs:
-  build-deploy:
+  build-testing:
     runs-on: ubuntu-20.04
+    timeout-minutes: 20
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Checkout Action Base
-        uses: actions/checkout@v3
-        with:
-          repository: xcidic/cao-actions-base
-          ref: v4.7
-          token: ${{ secrets.AGENT_TOKEN }}
-          path: ./.github/actions/base
-      - name: Setup Base
-        uses: ./.github/actions/base
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
-          pm2-args: start:prod
-          pm2-env: ${{ env.PM2_ENV }}
-          pm2-name: ${{ env.PM2_NAME }}
-          is-deploy: ${{ env.IS_DEPLOY }}
-          deploy-host: ${{ env.DEPLOY_HOST }}
-          deploy-host-key: ${{ secrets.DEPLOY_HOST_KEY_DEV }}
-
-          is-mend: ${{ env.IS_MEND }}
-          mend-product: ${{ env.MEND_PRODUCT }}
-          mend-project: ${{ env.MEND_PROJECT }}
-          mend-host-key: ${{ secrets.MEND_HOST_KEY }}
-          mend-follow-policy: ${{ env.MEND_FOLLOW_POLICY }}
-          mend-ignore-result: ${{ env.MEND_IGNORE_RESULT }}
-
-      - run: yarn install
+          cache: 'yarn'
+      - name: Install dependencies
+        run: yarn
       - run: yarn test
-      - if: ${{ fromJSON(env.IS_DEPLOY) }}
+      - name: Mend CLI Scan
+        env:
+          #SCA
+          MEND_EMAIL: ${{secrets.MEND_SCA_EMAIL}}
+          MEND_USER_KEY: ${{secrets.MEND_SCA_USERKEY}}
+          MEND_URL: https://saas.mend.io
+          #SAST
+          # MEND_SAST_SERVER_URL: https://saas.mend.io/sast
+          # MEND_SAST_API_TOKEN: ${{secrets.MEND_SAST_API}}
+          # MEND_SAST_ORGANIZATION: ${{secrets.MEND_SAST_ORGANIZATION}}
         run: |
-          echo -e "${{ secrets.DEV_ENV }}" > .env
-          yarn build
-          rsync -avzrut --delete-delay --exclude .git . $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
-          ssh $DEPLOY_USER@$DEPLOY_HOST 'cd ${{ env.DEPLOY_PATH }} && pm2 startOrReload ecosystem.config.cjs'
+          echo Downloading Mend CLI
+          curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend
+          echo Start Mend CLI scan
+          ./mend sca -u
       
   # sonarqube-scanning:
   #   runs-on: ubuntu-20.04
