--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -45,7 +45,7 @@ jobs:
     env:
       WS_APIKEY: ${{secrets.MEND_SCA_APIKEY}}
       WS_USERKEY: ${{secrets.MEND_SCA_USERKEY}}
-      WS_WSS_URL: https://saas.mend.io/agent
+      WS_WSS_URL: https://saas-eu.whitesourcesoftware.com
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
