update readme file

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -105,7 +105,7 @@ jobs:
   #         key: ${{ secrets.PRIVATE_KEY }}
   #         port: 22
   #         script: |
-  #           cd ~/apps/github-action3
+  #           cd ~/apps/github-actions-cicd-sec
   #           git pull origin dev
   #           git status
   #           yarn
